feat:toda tela e fluxo adicionado

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,4 +123,12 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+.backround-image{
+  background-image: url("../assets/coder.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
